kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleexec-lb
spec:
  type: LoadBalancer
  selector:
    app: simpleexec
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
